# rookie

./: .gitignore  README.md  rookie
docker/: Dockerfile  bashrc_additions  deploy.Dockerfile  dev.Dockerfile  devcontainer.json
hooks/: pre-commit
hw/: .gitignore  BOM.md  rookie.kicad_sym
hw/pico_breakout/: fp-lib-table  pico_breakout.kicad_dru  pico_breakout.kicad_pcb  pico_breakout.kicad_prl  pico_breakout.kicad_pro  pico_breakout.kicad_sch
hw/pico_breakout/v1_6_08_2026/: pico_breakout.csv
hw/power_dist/: power_dist.kicad_prl  power_dist.kicad_pro  power_dist.kicad_sch
hw/power_distribution/: fp-lib-table  power_dist.kicad_sym  power_distribution.kicad_prl  power_distribution.kicad_pro  power_distribution.kicad_sch  ~power_distribution.kicad_sch.lck
hw/robot_controller/: README.md  fp-info-cache  motordriver.kicad_pcb  motordriver.kicad_prl  motordriver.kicad_pro  motordriver.kicad_sch
hw/robot_controller/3dmodels/: CC0603N_YAG.step  WCAP-ASLI_6.3X5.5.step
hw/robot_controller/doc/: notes.md
hw/robot_controller/footprints/motordriver.pretty/: CC0603N_YAG.kicad_mod  LED_SMLD12_ROM.kicad_mod  WCAP-ASLI_6.3X5.5_DXL_.kicad_mod
hw/robot_controller/symbols/: motor_driver.kicad_sym
hw/rookie.pretty/: 74LVC14APW.kicad_mod  CAP_A750MV477M1VAAE018_KEM.kicad_mod  DPAK_36P4LLF6_STM-L.kicad_mod  DPAK_36P4LLF6_STM-M.kicad_mod  DPAK_36P4LLF6_STM.kicad_mod  LGA-14L_2P5X3P0X0P83-L.kicad_mod  LGA-14L_2P5X3P0X0P83-M.kicad_mod  LGA-14L_2P5X3P0X0P83.kicad_mod  SMB_DIO-L.kicad_mod  SMB_DIO-M.kicad_mod  SMB_DIO.kicad_mod  SOD-123_MCC-L.kicad_mod  SOD-123_MCC-M.kicad_mod  SOD-123_MCC.kicad_mod  SOT402-1_NEX-L.kicad_mod  SOT402-1_NEX-M.kicad_mod  SOT402-1_NEX.kicad_mod
pico_interface/: CMakeLists.txt  console.py  generate.py  pico_interface.yaml
pico_interface/include/pico_interface/: PicoInterface.hpp
pico_interface/protos/: Heartbeat.proto  Reset.proto
pico_interface/scripts/: pico_interface.py
pico_interface/templates/: message.py.j2
src/: CMakeLists.txt  CMakePresets.json
src/pico_interface/: .clang-format  .gitignore  CMakeLists.txt  README.md
src/pico_interface/cmake/: pico_interfaceConfig.cmake.in
src/pico_interface/include/pico_interface/: PicoInterface.hpp
src/pico_interface/protos/: Clock.proto  Heartbeat.proto  Imu.proto  Motors.proto  Reset.proto  State.proto  Vector3.proto  Velocity.proto
src/pico_interface/py/pico-interface/: .gitignore  pyproject.toml
src/pico_interface/py/pico-interface/src/pico_interface/: __init__.py
src/pico_interface/scripts/: console.py  generate.py  generate_protos.sh  generate_python.sh  test.py
src/rookie_pico/: .clang-format  .clang-tidy  .clangd  CMakeLists.txt  CMakePresets.json  README.md
src/rookie_pico/include/rookie_pico/: Clock.hpp  ClosedLoopController.hpp  Commands.hpp  Config.hpp  Encoders.hpp  Flag.hpp  Frames.hpp  Imu.hpp  MessageHandler.hpp  Motors.hpp  OutboundQueue.hpp  Pins.hpp  RobotConfig.hpp  System.hpp  Types.hpp  main.h
src/rookie_pico/scripts/: build-picotool.sh
src/rookie_pico/src/: ClosedLoopController.cpp  Config.cpp  Encoders.cpp  Imu.cpp  Motors.cpp  OutboundQueue.cpp  System.cpp  command_test.cpp  encoder_test.cpp  imu_test.cpp  main.cpp
src/ros/: .gitignore  README.md  colcon_defaults.yaml
src/ros/src/mobility_driver/include/mobility_driver/: SerialPort.hpp
src/ros/src/rookie/config/: slam_toolbox.yaml
src/ros/src/rookie/launch/: gz_spawn_model.launch.py  rookie.launch
src/ros/src/rookie_description/hooks/: rookie_description.dsv.in
src/ros/src/rookie_description/urdf/: rookie.gazebo.xacro  rookie.urdf.xacro
workspace/: .gitignore
workspace/install/: local_setup.sh  setup.sh
workspace/install/mobility_driver/include/mobility_driver/mobility_driver/: MobilityDriver.hpp
workspace/install/mobility_driver/lib/mobility_driver/: mobility_driver_node
workspace/install/mobility_driver/share/mobility_driver/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
workspace/install/mobility_driver/share/mobility_driver/cmake/: export_mobility_driverExport.cmake
workspace/install/pico_interface/share/pico_interface/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
workspace/log/: latest_build  latest_list
workspace/src/mobility_driver/: CMakeLists.txt
workspace/src/mobility_driver/config/: chassis_params.yaml
workspace/src/mobility_driver/include/mobility_driver/: MobilityDriver.hpp  SerialPort.hpp
workspace/src/mobility_driver/mobility_driver/: serial_test.py
workspace/src/mobility_driver/src/: MobilityDriver.cpp  SerialPort.cpp  mobility_driver_node.cpp
workspace/src/mobility_driver/srv/: EStop.srv
workspace/src/pico/pico_interface/: CMakeLists.txt
workspace/src/pico/pico_interface/include/pico_interface/: PicoInterface.hpp
workspace/src/rookie/: CMakeLists.txt  package.xml
workspace/src/rookie/config/: costmap.yaml  ekf.sim.yaml  rookie.gz_bridge.yaml  rookie.rviz
workspace/src/rookie/launch/: navigation.launch  rookie.launch  sim.launch
workspace/src/rookie_description/: .gitignore  CMakeLists.txt  package.xml
workspace/src/rookie_description/models/: model.sdf
workspace/src/rookie_description/models/Banebots_T81_Wheel/: model.config
workspace/src/rookie_description/models/meshes/: Banebots_T81_Wheel.dae
workspace/src/rookie_description/urdf/: .gitignore  macros.xacro  rookie.gazebo.xacro  rookie.urdf  rookie.urdf.xacro  rookie_gazebo.xacro
